--- a/DES/Tema1/Ejercicios/style.css
+++ b/DES/Tema1/Ejercicios/style.css
@@ -5,17 +5,11 @@ justify-content: center;
 }
 
 .caja{
-height: 200px;
-width: 300px;
+height: 300px;
+width: 500px;
 border: 1px solid black;
 padding: 10px, 5px, 10px, 5px;
 display: flex ;
 align-items: center;
-justify-content: center;
-}
-
-p{
-    font-size: large;
-    text-align: center;
-
+justify-content: baseline;
 }
